auth middleware fixes
